fix(components): [select] collapse-tags no wrap (#10872)

--- a/packages/theme-chalk/src/select.scss
+++ b/packages/theme-chalk/src/select.scss
@@ -68,6 +68,10 @@
     }
   }
 
+  .#{$namespace}-select-tags-wrapper--collapse-tags {
+    white-space: nowrap;
+  }
+
   @each $size in (large, small) {
     @include m($size) {
       line-height: map.get($input-height, $size);
